--- a/forms/forms.html
+++ b/forms/forms.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap" rel="stylesheet">
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
@@ -62,6 +65,9 @@
 		</section>
 		<aside>
 			<h3>Our Location</h3>
+			<iframe
+				src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2822.2955310817615!2d-93.27243448449606!3d44.978307279098125!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x52b3329a6e23a267%3A0x42412ff47609ca09!2s60%20South%206th%20St%2C%20Minneapolis%2C%20MN%2055402%2C%20EUA!5e0!3m2!1spt-BR!2sde!4v1635949988763!5m2!1spt-BR!2sde"
+				width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 			<address>
 				Frontend Masters &middot;
 				60 South 6th Street &middot;
